Fixed problem with extra space after footer

--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,13 @@ section:nth-child(odd), header, footer {
     font-size: 0.8em;
     padding-right: 0.4em;
 }
+
+footer {
+    padding-top: 1em;
+}
+
+footer p {
+    padding-bottom: 1em;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+}
